style: fix navbar z-index and add shadow

--- a/src/components/MobileSearchDialog/MobileSearchDialog.module.css
+++ b/src/components/MobileSearchDialog/MobileSearchDialog.module.css
@@ -23,7 +23,7 @@
 }
 
 .overlay {
-  z-index: 1;
+  z-index: 2;
 }
 
 .overlay[data-state="open"] {
