--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -6,7 +6,10 @@
   max-height: 75px;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
+  box-shadow:
+    0 0.25rem 0.5rem rgba(0, 0, 0, 0.1),
+    0 0.5rem 1rem rgba(0, 0, 0, 0.07);
 }
 
 .linksContainer {
